--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
-    "install": "^0.6.1"
+    "install": "^0.6.1",
+    "underscore": "^1.8.3"
   }
 }
