--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "install": "^0.6.1",
+    "sequelize": "^3.5.1",
     "underscore": "^1.8.3"
   }
 }
