--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
+    "crypto-js": "^3.1.5",
     "express": "^4.13.3",
     "install": "^0.6.1",
+    "jsonwebtoken": "^5.0.5",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.5.1",
